FreeST/test/Programs/InvalidTests/ParseErrors/dupConsChan/dupConsChan.fst

data T = A | B

type C : 1S = &{A: Skip, B: Skip}